fix vertical alignment of cc icon with ff-tisa

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -435,7 +435,6 @@ header nav ul li a:hover {
 }
 .session-transcription {
     margin-left: 1em;
-    vertical-align: middle;
     opacity: .9;
 }
 
